fixed contrast

--- a/final-website-project/styles/small.css
+++ b/final-website-project/styles/small.css
@@ -363,7 +363,7 @@ margin: 25px 0 10px 20px;
     top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: var(--primary-color);
+  color: #FFFFFF;
   font-weight: bold;
   }
 
